# Kay-Dosyalama

./: .cursorignore  .cursorrules  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: base_agent.py  classifier_agent.py  drafter_agent.py  mevzuat_agent.py  ocr_agent.py  routing_agent.py  validator_agent.py
agents/prompts/: classifier_prompts.py  drafter_prompts.py  mevzuat_prompts.py  routing_prompts.py
api/: main.py  schemas.py
api/routes/: health.py  process.py
core/: config.py  exceptions.py  graph.py  llm_client.py  state.py
data/: demo_samples.py  units_config.json
data/regulations/: bilgi_edinme_hakki_kanunu.txt  devlet_memurlari_kanunu.txt  dilekce_hakki_kanunu.txt  iyuk_2577.txt  resmi_yazisma_yonetmeligi.txt
data/synthetic_docs/bilgi_talebi/: bilgi_talebi_01.txt  bilgi_talebi_02.txt  bilgi_talebi_03.txt  bilgi_talebi_04.txt  bilgi_talebi_05.txt  bilgi_talebi_06.txt  bilgi_talebi_07.txt  bilgi_talebi_08.txt  bilgi_talebi_09.txt  bilgi_talebi_10.txt
data/synthetic_docs/dilekce/: dilekce_01.txt  dilekce_02.txt  (+8 more)
data/templates/: bilgilendirme.txt  cevap_yazisi.txt  ust_yazi.txt
docs/: JURY_DEMO.md
scripts/: build_vector_store.py  demo_runner.py  evaluate.py  generate_synthetic_data.py
tests/: conftest.py  test_classifier.py  test_full_pipeline.py  test_gorev1_integration.py  test_infrastructure.py  test_ui_pipeline.py
tests/fixtures/: sample_dilekce.txt  sample_sikayet.txt  sample_talep.txt
tools/: __init__.py  ocr_tools.py
ui/: streamlit_app.py
vector_store/: chroma_client.py  indexer.py
(+30 files in other folders)
